litmask/tests/compile/mask_serialize_unit_struct.stderr
error: MaskSerialize! grammar: supports structs with named fields only
 --> tests/compile/mask_serialize_unit_struct.rs:7:8
  |
7 | struct NothingToMask;
  |        ^^^^^^^^^^^^^
