litmask/tests/compile/mask_serialize_unit_struct.rs
//! `MaskSerialize` must reject unit structs — only named-field
//! structs carry maskable field names.

use litmask::MaskSerialize;

#[derive(MaskSerialize)]
struct NothingToMask;

fn main() {}
